engine/test/electron/scripts/lexer/errors/nested_unterminated_comment.e
// ERROR TEST: Nested block comment not properly closed
/* outer
   /* inner properly closed */
   but outer never closed
